--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
 :root {
-  --main-font: "Roboto", sans-serif;
-  --body-bg-color: #f2f2f2;
+  --main-font: "Lato", sans-serif;
+  --body-bg-color: #ffffff;
+  --text-color: #000000;
+  --primary-color: #ea5959;
+  --secondary-color: #525252;
+  --placeholder-color: #b5b5b5;
+  --form-bg-color: #f3f3f3;
+  --line-color: #d8d8d8;
+  --button-bg-color: var(--primary-color);
+  --label-color: #5a5a5a;
+  --trash-color: #ff0000;
+  --favorites-color: #ffd700;
 }
 * {
   padding: 0;
@@ -12,52 +22,214 @@ body {
   min-height: 100dvh;
   font-family: var(--main-font);
   background-color: var(--body-bg-color);
+  color: var(--text-color);
   padding: 16px;
+  display: flex;
+  gap: 30px;
 }
-ul{
+ul {
   list-style: none;
 }
-button{
+button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  color: inherit;
 }
-#sidebar{
+#sidebar {
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
-#category-list{
+#logo {
+  color: var(--text-color);
+  font-size: 39px;
+  font-weight: 700;
+}
+#logo span {
+  color: var(--primary-color);
+}
+#sidebar ul {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  max-height: 350px;
-  overflow-y: scroll;
 }
-#category-list li {
+#sidebar > ul{
+  max-height: 250px;
+  overflow-y: auto;
+}
+#sidebar li {
   display: flex;
   gap: 6px;
 }
-#category-list :where(button , span){
-  font-size: 20px;
+#sidebar li {
+  color: var(--secondary-color);
+  font-size: 22px;
+}
+#sidebar li button {
+  font-size: 22px;
+}
+#sidebar li span {
+  font-size: 22px;
 }
 #category-form {
   max-width: 300px;
   display: flex;
   gap: 6px;
-  background-color: #ffffff;
-  padding: 6px 14px;
-}
-#category-form button {
-  color: #ababab;
-  font-size: 20px;
+  background-color: var(--form-bg-color);
+  padding: 10px 27px;
+  border-radius: 8px;
 }
 #category-form input {
   border: none;
   outline: none;
   font-size: 20px;
   flex-grow: 1;
+  background-color: inherit;
+  font-size: 18px;
 }
 #category-form input::placeholder {
-  color: #ababab;
+  color: var(--placeholder-color);
+}
+#category-form button {
+  color: var(--placeholder-color);
+  font-size: 20px;
+  background-color: inherit;
+}
+#line {
+  background-color: var(--line-color);
+  width: 1px;
+  min-height: 100%;
+}
+#main {
+  flex-grow: 1;
+}
+#title {
+  font-size: 31px;
+}
+#task-form {
+  margin: 25px auto 32px;
+  width: 100%;
+  display: flex;
+  gap: 23px;
+  flex-wrap: wrap;
+}
+#task-input {
+  font-size: 20px;
+  background-color: var(--form-bg-color);
+  border: transparent;
+  padding: 10px 27px;
+  border-radius: 8px;
+  flex-grow: 1;
+}
+#task-input::placeholder {
+  color: var(--placeholder-color);
+}
+#task-category {
+  font-size: 20px;
+  background-color: var(--form-bg-color);
+  border: transparent;
+  padding: 10px 27px;
+  border-radius: 8px;
+  flex-grow: 1;
+  cursor: pointer;
+}
+#task-form button {
+  font-size: 20px;
+  background-color: var(--form-bg-color);
+  border: transparent;
+  padding: 10px 27px;
+  flex-grow: 1;
+  border-radius: 8px;
+}
+#task-list {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+#task-list li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+#task-list li div:nth-child(1) {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  align-items: center;
+}
+#task-list input {
+  width: 28px;
+  height: 28px;
+  appearance: none;
+  background-color: transparent;
+  border: 1px solid var(--primary-color);
+  border-radius: 8px;
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+#task-list input::before {
+  content: url(./images/icon.png);
+  transform: scale(0);
+  transition: all 0.1s ease-in-out;
+}
+#task-list input:checked::before {
+  transform: scale(0.7);
+}
+#task-list input:checked + label {
+  text-decoration: line-through;
+  color: var(--primary-color);
+}
+#task-list label {
+  font-size: 18px;
+  cursor: pointer;
+  color: var(--label-color);
+}
+#task-list select {
+  border-radius: 4px;
+  padding: 5px 20px;
+  background-color: var(--button-bg-color);
+  border: none;
+  color: var(--body-bg-color);
+  font-size: 12px;
+}
+#task-list li div:nth-child(2) {
+  display: none;
+  gap: 16px;
+}
+#task-list li:hover div:nth-child(2) {
+  display: flex;
+}
+#task-list li div:nth-child(2) button {
+  font-size: 20px;
+}
+#delete-button {
+  color: var(--trash-color);
+}
+#favorites-button {
+  color: var(--favorites-color);
+}
+@media (width < 1159px) {
+  body {
+    flex-direction: column;
+    gap: 52px;
+  }
+  #category-form{
+    max-width: 100%;
+  }
+  #line {
+    background-color: var(--line-color);
+    width: 100%;
+    min-height: 1px;
+  }
+  #main {
+    padding: 0;
+  }
+  #task-form {
+    flex-wrap: wrap;
+  }
 }
